--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,9 @@ body{
     position: relative;
     background-color:rgb(198, 113, 59);
     color: white;
+    border: none;
+    padding: 8px;
+    border-radius: 5px;
 }
 
 footer{
